--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!--contact section start-->
      <section class="contact" >
        <div class="content">
-         <h2>CONTACT US</h2>
+         <h2>CONTACT ME</h2>
         </div>
         <div class="container-c">
         <div class="contactInfo">
@@ -71,8 +71,7 @@
             <div class="line line-2"></div>
             <div class="line line-3"></div>
         </div>
-    
-
+        
      <ul class="nav-list" id="nav-list"> 
       <li class="nav-item">
         <a href="index.html" class="nav-link">home</a>
