--- a/report.html
+++ b/report.html
@@ -35,21 +35,25 @@
         <h2>1. Creating the home page and hamburger menu:</h2>
     </div>
     <p>
-          While creating the homepage the basic html code was first written and was linked to the stylesheet or the style page so that the homepage could be styled later on. The background image was then selected from google at the website pixabay.com where free images were available. Since the home page should be accessible from other webpages and vice versa the hamburger menu was then created. To create the hamburger menu first div class container and wrapper were added then below the nav class navbar was added inside where the menu would be. Division class hamburger menu had three div class lines and the nav list contained the names of the subpages. At last, the div class welcome-text was added where a paragraph of introduction for the home page was written and a contact me button was added below the welcome-text which would be linked to the contact subpage. Creating the animated hamburger was the most cumbersome process of the whole website. Java script (script.js) was used to create the retractable effect of change after clicking the animated hamburger icon which was created by styling change and div class line (1, 2 and 3).  The font for the website was added from google fonts. The styling was done in styles.css where the image was added to the body, the width and the height of the navbar was selected along with the transition and position, the navbar was made to be a little more transparent so the opacity to 0.9 and the background of the navbar to be black. To make the webpage responsive @media(max-width=800px) was used where the container, welcome-text and nav-bar was styled accordingly.
+          While creating the homepage the basic html code was first written and was linked to the stylesheet or the style page so that the homepage could be styled later on. The background image was then selected from google at the website pixabay.com where free images were available. Since the home page should be accessible from other webpages and vice versa the hamburger menu was then created. To create the hamburger menu first div class container and wrapper were added then below the nav class navbar was added inside where the menu would be. Division class hamburger menu had three div class lines and the nav list contained the names of the subpages. At last, the div class welcome-text was added where a paragraph of introduction for the home page was written and a contact me button was added below the welcome-text which would be linked to the contact subpage. Creating the animated hamburger was the most cumbersome process of the whole website. Java script (script.js) was used to create the retractable effect of change after clicking the animated hamburger icon which was created by styling change and div class line (1, 2 and 3).  The font for the website was added from google fonts. The styling was done in styles.css where the image was added to the body, the width and the height of the navbar was selected along with the transition and position, the navbar was made to be a little more transparent so the opacity to 0.9 and the background of the navbar to be black. To make the webpage responsive @media(max-width=800px) was used where the container, welcome-text and nav-bar was styled accordingly at styles.css. The index page was then validated at w3c markup validation service .
     </p>
+    <br>
+    <div>
     
-    <p>index.html:</p>
+    <p>Index.html:</p>
    <img class="img-index" src="htmlpics/index.png" alt="index image">
 
-<p>style.css:</p>
-<img class="img-index" src="htmlpics/index style.png" alt="index1 image">
-<img class="img-index" src="htmlpics/index style2.png" alt="index2 image">
-<img class="img-index" src="htmlpics/index style3.png" alt="index3 image">
+<p>Style.css:</p>
+<img class="img-index" src="htmlpics/indexstyle.png" alt="index1 image">
+<img class="img-index" src="htmlpics/indexstyle2.png" alt="index2 image">
+<img class="img-index" src="htmlpics/indexstyle3.png" alt="index3 image">
 <p>Javascript: Java script (script.js) was used for the hamburger menu and navbar.</p>
 <img class="img-index" src="htmlpics/script.png" alt="indexsc image">
 <p>Validation: After the styling of index.html it was then validated at w3c markup validation service.</p>
-<img class="img-index" src="htmlpics/index validation.png" alt="indexp image">
+<img class="img-index" src="htmlpics/indexvalidation.png" alt="indexp image">
 </div>
+<br>
+
 
 <div class="subpages">
     <div class="subpages-head blue">
@@ -58,95 +62,107 @@
         <p>
         After the home page subsiquent sunpages were created:
         </p>
+        <br>
 
     <div class="subpages">
         <div class="home-head blue">
-           <h2>cv</h2>
+           <h2>a. CV</h2>
         </div>
         <p>
-         For cv a separate box was created and contact information first-name and last-name was added to the div header-left and at the same time email, phone and address was added to the div header-right. Division class objective was created and an icon was added and a paragraph of words were written below the div class objective. For the div class education a table was created to arrange the academic info on the institute and the grades. Technical skills were listed on the div class skills and an icon was added and the same process was followed in the div class personal information and declaration Then the cv was then styled at styles.css 
+         For cv a separate box was created and contact information first-name and last-name was added to the div header-left and at the same time email, phone and address was added to the div header-right. Division class objective was created and an icon was added and a paragraph of words were written below the div class objective. For the div class education a table was created to arrange the academic info on the institute and the grades. Technical skills were listed on the div class skills and an icon was added and the same process was followed in the div class personal information and declaration Then the cv was then styled at styles.css and validated at w3c markup validation service.
         </p>
+        <br>
+
         <p>cv.html:</p>
-    <img class="img-cv" src="htmlpics/cv.png" alt="cv image">
-    <img class="img-cv" src="htmlpics/cv2.png" alt="cv image">
-    <img class="img-cv" src="htmlpics/cv3.png" alt="cv1 image">
-    <img class="img-cv" src="htmlpics/cv4.png" alt="cv2 image">
+    <img class="img-cv" src="htmlpics/CV.png" alt="cv image">
+    <img class="img-cv" src="htmlpics/CV2.png" alt="cv1 image">
+    <img class="img-cv" src="htmlpics/CV3.png" alt="cv2 image">
+    <img class="img-cv" src="htmlpics/CV4.png" alt="cv3 image">
     <p>styles.css:</p>
-    <img class="img-cv" src="htmlpics/cv style.png" alt="cv1 image">
-    <img class="img-cv" src="htmlpics/cv style2.png" alt="cv2 image">
-    <img class="img-cv" src="htmlpics/cv style3.png" alt="cv3 image">
+    <img class="img-cv" src="htmlpics/cvstyle.png" alt="cv1 image">
+    <img class="img-cv" src="htmlpics/cvstyle2.png" alt="cv2 image">
+    <img class="img-cv" src="htmlpics/cvstyle3.png" alt="cv3 image">
     <p>Validation:</p>
-    <img class="img-cv" src="htmlpics/cv validation.png" alt="cvp image">
+    <img class="img-cv" src="htmlpics/cvvalidation.png" alt="cvp image">
     </div>
+    <br>
 
     <div class="portfolio">
         <div class="portfolio-head blue">
-            <h2>Portfolio</h2>
+            <h2>b. Portfolio</h2>
         </div>
             <p>
-            For portfolio placeholders were placed inside the webpage using grid and the placeholders at a size of 320×240 was downloaded from google from placeholder generator. It was then added to div class “image-grid” in the html page. Then it was made responsive at style.css so that it can function in both mobile and laptop.
+            For portfolio div class image grid was made where placeholders were placed inside the webpage using grid and the placeholders at a size of 320×240 was downloaded from google from placeholder generator. It was then added to div class “image-grid” in the html page. Then it was made responsive at style.css so that it can function in both mobile and laptop and styled at styles.css and then the debugging process was done by inspecting the webpage. After that the webpage was validated at w3c markup validation service.
            </p>
-           <p>portfolio.html:</p>
+           <br>
+           <p>Portfolio.html:</p>
          <img class="img-portfolio" src="htmlpics/portfolio.png" alt="portfolio image">
-         <p>styles.css:</p>
-         <img class="img-portfolio" src="htmlpics/portfolio style.png" alt="portfolioi image">
-         <img class="img-portfolio" src="htmlpics/portfolio style2.png" alt="portfolio2 image">
+         <p>Styles.css:</p>
+         <img class="img-portfolio" src="htmlpics/portfoliostyle.png" alt="portfolioi image">
+         <img class="img-portfolio" src="htmlpics/portfoliostyle2.png" alt="portfolio2 image">
          <p>Validation:</p>
-         <img class="img-portfolio" src="htmlpics/portfolio validation.png" alt="portfolio3 image">
+         <img class="img-portfolio" src="htmlpics/portfoliovalidation.png" alt="portfolio3 image">
    </div>
+   <br>
 
     <div class="call">
     <div class="call-head blue">
-            <h2>Contact page</h2>
+            <h2>c. Contact page</h2>
         </div>
            <p>
-            For contact.html a section contact and div class content was created inside div content the heading “contact us” was written. Division class container and contact info was made and icons were added inside the div class box-x from font-awesome. The contact info was added inside the div class text Then to create the contact form heading send messages was written and the questions like full name, email and type your message was written inside the div class input box.
+            For contact.html a section contact and div class content was created inside div content the heading “contact us” was written. Division class container and contact info was made and icons were added inside the div class box-x from font-awesome. The contact info was added inside the div class text Then to create the contact form heading send messages was written and the questions like full name, email and type your message was written inside the div class input box. it was styled at style.css and validated at w3c markup validation service.
            </p>
-           <p>contact.html:</p>
+           <br>
+
+           <p>Contact.html:</p>
      <img class="img-call" src="htmlpics/contactme.png" alt="contact image">
      <img class="img-call" src="htmlpics/contactme2.png" alt="contacti2 image">
-     <p>styles.css</p>
-     <img class="img-call" src="htmlpics/contact style.png" alt="contact image">
-     <img class="img-call" src="htmlpics/contact style2.png" alt="contact2 image">
-     <img class="img-call" src="htmlpics/contact style3.png" alt="contact3 image">
-     <img class="img-call" src="htmlpics/contact style4.png" alt="contact4 image">
+     <p>Styles.css</p>
+     <img class="img-call" src="htmlpics/contactstyle.png" alt="contact image">
+     <img class="img-call" src="htmlpics/contactstyle2.png" alt="contact2 image">
+     <img class="img-call" src="htmlpics/contactstyle3.png" alt="contact3 image">
+     <img class="img-call" src="htmlpics/contactstyle4.png" alt="contact4 image">
      <p>Validation</p>
-     <img class="img-call" src="html pics/contact validation.png" alt="contactp image">
+     <img class="img-call" src="htmlpics/contactvalidation.png" alt="contactp image">
      </div>
  </div>
+ <br>
 
      <div class="problems">
         <div class="problems-head blue">
             <h2>3. Problems and changes</h2>
         </div>
         <div>
-        <h2>•  The background of the website was changed</h2>
-     <img class="img-prob" src="htmlpics/background change.png" alt="home-page image">
-     <h2> To this image of a landscape from pixabay.com  </h2>
-     <img class="img-prob" src="htmlpics/homepage background change.png" alt="home-page image">
-     <h2>•   There were many problems while creating webpages like the contact page not working.</h2>
-     <img class="img-prob" src="htmlpics/contact problem.png" alt="contact image">
-     <h2>  But the problem was fixed after the verification and debugging process</h2>
-      <img class="img-prob" src="htmlpics/contactus fixed.png" alt="contact image">
-     <h2>•   The colour of the box in the CV  from grey to  #173e43  </h2>
-     <img class="img-prob" src="htmlpics/box height and color change.png" alt="cv image">
-     <h2>The box containing div class personal information and declaration was fixed and also the height of the box was changed to be shorter.</h2>
+            <br>
+        <p>•  The background of the website was changed</p>
+     <img class="img-prob" src="htmlpics/backgroundchange.png" alt="home-page image">
+     <p> To this image of a landscape from pixabay.com .</p>
+     <img class="img-prob" src="htmlpics/homepagebackgroundchange.png" alt="home-page image">
+     <p>•   There were many problems while creating webpages like the contact page not working</p>
+     <img class="img-prob" src="htmlpics/contactproblem.png" alt="contact image">
+     <p>  But the problem was fixed after the verification and debugging process.</p>
+      <img class="img-prob" src="htmlpics/contactusfixed.png" alt="contact image">
+     <p>•   The colour of the box in the CV from grey to #173e43  </p>
+     <img class="img-prob" src="htmlpics/boxheightandcolorchange.png" alt="cv image">
+     <p>The box containing div class personal information and declaration was fixed and also the height of the box was changed to be shorter.</p>
      <img class="img-prob" src="htmlpics/cvfixed.png" alt="cv image">
-      <h2>• There was a lot of problems while making the portfolio responsive. </h2>
-     <img class="img-prob" src="htmlpics/portfolio change.png" alt="portfolio image">
-     <img class="img-prob" src="htmlpics/portfolio responsive.png" alt="portfolio image">
-     <h2>  But the problem was fixed after the verification and debugging process</h2>
-     <img class="img-prob" src="htmlpics/portfolio responsive fixed.png" alt="portfolio image">
+      <p>• There was a lot of problems while making the portfolio responsive </p>
+     <img class="img-prob" src="htmlpics/portfoliochange.png" alt="portfolio image">
+     <img class="img-prob" src="htmlpics/portfolioresponsive.png" alt="portfolio image">
+     <p>  But the problem was fixed after the verification and debugging process .</p>
+     <img class="img-prob" src="htmlpics/portfolioresponsivefixed.png" alt="portfolio image">
      </div>
+     <br>
 
         <div class="conclusion">
             <div class="conclusion-head blue">
                 <h2>4. Conclusion</h2>
             </div>
                 <p>
-                This report is a reflection on the journey and my learning process while I was creating the website. Since this was my first time making a website, it was a long trial and error process for me. Summing up the things I learned from my lectures and putting it in the website was a huge boost to my confidence in while in this process. There were a lot of things that I hoped I could do but at the end I gave up due to my limited skills and still there are a lot of errors in this assignment that I hope I can reduce in the future.
+                This report is a reflection on the journey and my learning process while I was creating the website. Since this was my first time making a website, it was a long trial and error process for me. Summing up the things I learned from my lectures and putting it in the website was a huge boost to my confidence in while and in this process there were a lot of things that I hoped I could do but at the end I had to give up due to my limited knowledge and skill set. There are still a lot of errors in this assignment that I hope I can prevent and reduce in the future.
                 </p>
             </div>
+            <br>
     
     <div class="references">
         <div class="references-head blue">
@@ -171,6 +187,7 @@
                 (Accessed: 1 July 2021).
             </p>
         </div>
+        <br>
     <!--report ends-->
     <div class="container">
        <nav class="navbar">
@@ -198,6 +215,8 @@
       </li>
       </ul>
       </nav>
+
+  </div>
         </div>
        </div>
 <script src="script.js"></script>
